# game_scheduling

./: LICENSE  README.md  pyproject.toml
scripts/: check_schedule.py  show_field_usage.py
src/scheduling/: __about__.py  __init__.py  duration.py  game.py  games_for_day.py  parser.py
tests/: __init__.py  conftest.py  test_duration.py  test_game.py  test_games_for_day.py  test_parser.py
